Bug con Overflow+NavbarLink

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,8 @@
 .header__Container{
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 1;
+    width: 100%;
     padding: 15px 0px 15px 44px;
     display: flex;
     flex-direction: row;
