--- a/src/Components/Navbar/NavBar.module.css
+++ b/src/Components/Navbar/NavBar.module.css
@@ -56,7 +56,7 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        align-items: end;
+        align-items: flex-end;
         right: 0;
         top: 120px;
         width: 100%;
